Add ideas as a model and views for viewing and editing them

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,9 +1,9 @@
-<footer class="footer">
-  <nav>
-    <ul>
-      <li><%= link_to "About",   about_path %></li>
-      <li><%= link_to "Contact", contact_path %></li>
-      <li><a href="http://news.railstutorial.org/">News</a></li>
-    </ul>
-  </nav>
-</footer>
+<nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
+	<div class="container">
+	    <ul class="nav navbar-nav pull-right">
+	      <li><%= link_to "About",   about_path %></li>
+	      <li><%= link_to "Contact", contact_path %></li>
+	      <li><a href="http://news.railstutorial.org/">News</a></li>
+	    </ul>
+    </div>
+</nav>
