--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,17 @@
-<header class="navbar navbar-fixed-top navbar-inverse" role="navigation">
+<header>
+  <div class="navbar navbar-fixed-top navbar-inverse" role="navigation" id="slide-nav">
     <div class="container">
-      <%= link_to "idea app", root_path, id: "logo" %>
-      <nav>
-        <ul class="nav navbar-nav navbar-right">
+      <div class="navbar-header">
+      <a class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> 
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+     </a>
+      <%= link_to "idea app", root_path, id: "logo", :class => "navbar-brand" %>
+    </div>
+      <div id="slidemenu">
+        <ul class="nav navbar-nav navbar-right collapse navbar-collapse">
           <li><%= link_to "Home", root_path %></li>
           <li><%= link_to "Help", help_path %></li>
           <% if signed_in? %>
@@ -24,6 +33,7 @@
             <li><%= link_to "Sign in", signin_path %></li>
           <% end %>
         </ul>
-      </nav>
+      </div>
     </div>
+  </div>
 </header>
