--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -1,7 +1,8 @@
-<li id="<%= feed_item.id %>">
-  <%= link_to gravatar_for(feed_item.user), feed_item.user %>
-  <span class="user">
-    <%= link_to feed_item.user.name, feed_item.user %>
-  </span>
-  <%= render partial: 'shared/post', locals: { post: feed_item } %>
-</li>
+<div class="panel panel-default">
+  <div class="panel-body">
+		<li id="<%= feed_item.id %>" class="media">
+  		<div class="media-object pull-left"><%= link_to gravatar_for(feed_item.user), feed_item.user %></div>
+  		<div class="media-body"><%= render partial: 'shared/post', locals: { post: feed_item } %></div>
+		</li>
+	</div>
+</div>
