--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,10 +1,18 @@
 <% if signed_in? %>
   <div class="row">
-    <aside class="col-md-4">
+    <aside class="col-md-3">
       <section>
         <%= render 'shared/user_info' %>
       </section>
+       <section>
+        <a href="/submit"><button type="button" class="btn btn-lg btn-primary">Submit an Idea</button></a>
+ <!--        <%= render 'shared/idea_form' %> -->
+      </section>
     </aside>
+    <div class="col-md-9">
+      <h3>Idea Feed</h3>
+      <%= render 'shared/feed' %>
+    </div>
   </div>
 <% else %>
   <%= render 'shared/landing' %>
