--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -72,13 +72,17 @@ p {
   color: white;
   text-transform: uppercase;
   letter-spacing: -1px;
-  padding-top: 9px;
+  // padding-top: 9px;
   font-weight: bold;
   line-height: 1;
   &:hover {
     color: #fff;
     text-decoration: none;
   }
+}
+
+.navbar-brand{
+  padding: 0;
 }
 
 /* miscellaneous */
@@ -346,3 +350,15 @@ body.slide-active {
   margin-left: 10px;
 }
 
+.comment-panel{
+  padding-bottom: 15px;
+  margin-top: 90px;
+}
+
+div.pagination{
+  margin: 0;
+}
+
+.header-close-bot{
+  margin-bottom: 0;
+}
