--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
      </a>
-      <%= link_to "idea app", root_path, id: "logo", :class => "navbar-brand" %>
+      <%= link_to image_tag("logo.png", height: '50', width: '195') + "Idea app", root_path, id: "logo", :class => "navbar-brand" %>
     </div>
       <div id="slidemenu">
         <ul class="nav navbar-nav navbar-right collapse navbar-collapse">
