--- a/app/views/ideas/show.html.erb
+++ b/app/views/ideas/show.html.erb
@@ -3,7 +3,7 @@
 	<div class="row">
 	  <h1><%= @idea.title %></h1>
 	  <hr>
-	  <p><%= @idea.content %></p>
+	  <%= raw(@idea.content) %>
 	  <hr>
 	  
 	</div>
