--- a/app/views/ideas/edit.html.erb
+++ b/app/views/ideas/edit.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, "Edit idea") %>
-<h1>Update your idea</h1>
+<h1>Edit your idea</h1>
 
-<div class="col-md-8 col-md-offset-2">
+<div class="col-md-10 col-md-offset-1">
   <%= form_for(@idea) do |f| %>
     <%= render 'fields', f: f %>
     <div class="col-md-6">
