--- a/app/views/ideas/show.html.erb
+++ b/app/views/ideas/show.html.erb
@@ -4,6 +4,12 @@
 	  <h1><%= @idea.title %></h1>
 	  <hr>
 	  <%= raw(@idea.content) %>
+	  <div class="pull-right post-actions">
+	  	<%= link_to "Edit", edit_idea_path(@idea), class: "glyphicon glyphicon-edit" %>
+	  	<%= link_to "Delete", @idea, method: :delete,
+                                   data: { confirm: "Are you sure you want to delete the idea?" },
+                                   title: @idea.title, class: "glyphicon glyphicon-remove" %>
+		</div>
 	  <hr>
 	  
 	</div>
