--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,8 +11,8 @@
   <div class="col-md-8">
     <% if @user.ideas.any? %>
       <h3>Ideas (<%= @user.ideas.count %>)</h3>
-      <ol class="ideas">
-        <%= render @ideas %>
+       <ol class="media-list">
+        <%= render partial: "shared/post", collection: @ideas, as: :post %>
       </ol>
       <%= will_paginate @ideas %>
     <% end %>
