--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,7 +12,9 @@
     </div>
       <div id="slidemenu">
         <ul class="nav navbar-nav navbar-right collapse navbar-collapse">
+
           <li><%= link_to "Home", root_path %></li>
+          <li><%= link_to "Areas", areas_path %></li>
           <li><%= link_to "Help", help_path %></li>
           <% if signed_in? %>
             <li><%= link_to "Users", users_path %></li>
