--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -10,7 +10,7 @@
       </section>
     </aside>
     <div class="col-md-9">
-      <h3>Idea Feed</h3>
+      <h3>Latest Idea Feed</h3>
       <%= render 'shared/feed' %>
     </div>
   </div>
