Change idea model to include area during creation and editing

--- a/app/views/shared/_idea_form.html.erb
+++ b/app/views/shared/_idea_form.html.erb
@@ -1,6 +1,7 @@
 <%= form_for(@idea) do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
   <div class="field">
+  	<%= f.collection_select :area_id, Area.all, :id, :title, include_blank: true %>
   	<%= f.text_field :title, placeholder: "Title..." %>
     <%= f.text_area :content, placeholder: "Submit new idea..." %>
   </div>
