--- a/app/views/ideas/_fields.html.erb
+++ b/app/views/ideas/_fields.html.erb
@@ -3,6 +3,8 @@
 <div class="col-md-6">
 <%= f.label :title %>
 <%= f.text_field :title, :class => "form-control" %>
+<%= f.label :area %>
+<%= f.collection_select :area_id, @areas, :id, :title, {:selected => @area_sel.id} %>
 </div>
 <div class="col-md-12">
 <%= f.label :content %>
