--- a/app/views/shared/_post.html.erb
+++ b/app/views/shared/_post.html.erb
@@ -8,7 +8,7 @@
         <h4 class="media-heading"><%= link_to wrap(post.title), idea_path(post.id) %></h4>
         <span class="content"><%= strip_tags(post.content.truncate(220)) %></span>
         <span class="timestamp">
-          Posted <%= time_ago_in_words(post.created_at) %> ago by <%= link_to post.user.name, post.user %>.
+          Posted <%= time_ago_in_words(post.created_at) %> ago by <%= link_to post.user.name, post.user %> in <%= link_to Area.find(post.area_id).title, Area.find(post.area_id) %>.
         </span>
         <span class="pull-right post-actions">
         <% if current_user?(post.user) %>
