--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,6 +14,7 @@
         <ul class="nav navbar-nav navbar-right collapse navbar-collapse">
 
           <li><%= link_to "Home", root_path %></li>
+          <li><%= link_to "Ideas", ideas_path %></li>
           <li><%= link_to "Areas", areas_path %></li>
           <li><%= link_to "Help", help_path %></li>
           <% if signed_in? %>
