--- a/app/views/ideas/show.html.erb
+++ b/app/views/ideas/show.html.erb
@@ -4,16 +4,29 @@
 	  <h1><%= @idea.title %></h1>
 	  <hr>
 	  <%= raw(@idea.content) %>
-	  <% if current_user?(@idea.user) %>
-	  <div class="pull-right post-actions">
-	  	<%= link_to "Edit", edit_idea_path(@idea), class: "glyphicon glyphicon-edit" %>
-	  	<%= link_to "Delete", @idea, method: :delete,
-                                   data: { confirm: "Are you sure you want to delete the idea?" },
-                                   title: @idea.title, class: "glyphicon glyphicon-remove" %>
-		</div>
-		<% end %>
 	  <hr>
-	  
+	  <div id="upload">
+	  	<div id="dropzone">
+	  		<input data-url="/ideas/<%= @idea.id %>/uploads" id="uploaded_file" name="upload[uploaded_file]" multiple="" type="file"></input>
+	  		<div class="title">Drop file to upload</div>
+	  		<button type="button" class="browse btn btn-primary">Browse</button>
+	  	</div>
+	  	<div class="upload-list"></div>
+	  </div>
+	  <div id="files">
+	  	<div id="flash_notice"></div>
+	  	<%= render partial: "uploads/upload", collection: @uploads, as: :upload %>
+	  </div>
+	  <div class="row"></div>
+	  <hr>
+	  <% if current_user?(@idea.user) %>
+		  <div class="pull-right post-actions">
+		  	<%= link_to "Edit", edit_idea_path(@idea), class: "glyphicon glyphicon-edit" %>
+		  	<%= link_to "Delete", @idea, method: :delete,
+	                                   data: { confirm: "Are you sure you want to delete the idea?" },
+	                                   title: @idea.title, class: "glyphicon glyphicon-remove" %>
+			</div>
+		<% end %>
 	</div>
 	<h2 class="header-close-bot">Comments</h2>
 	<% if @comments_all.any? %>
