Add infinite scroll functionality to ideas and comments

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -166,7 +166,7 @@ input {
   }
 }
 
-/* microposts */
+/* ideas */
 
 .content {
   display: block;
@@ -212,6 +212,14 @@ aside {
   .gravatar {
     margin: 1px 1px;
   }
+}
+
+.load-more-ideas {
+  color: #FFFFFF;
+}
+
+.load-more-comments {
+  color: #FFFFFF;
 }
 
 /* Navbar responsive */
