--- a/app/views/ideas/_comment.html.erb
+++ b/app/views/ideas/_comment.html.erb
@@ -4,7 +4,7 @@
 			<div class="media-object pull-left"><%= link_to gravatar_for(comment.user), comment.user %></div>
 			<div class="media-body">
 	<h4 class="media-heading"><%= comment.title %></h4>
-	<span class="content"><%= comment.body %></span>
+	<span class="comment_content"><%= comment.body %></span>
 	<span class="timestamp">
 	  Posted <%= time_ago_in_words(comment.created_at) %> ago by <%= link_to comment.user.name, comment.user %>.
 	</span>
