--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -14,7 +14,7 @@
       </div>
       <% if @ideas.any? %> 
       <h2>Latest Ideas</h2>   
-        <ol class="media-list">
+        <ol class="media-list ideas">
           <%= render partial: "shared/post", collection: @ideas, as: :post %>
         </ol>
       <% end %>
