--- a/app/views/areas/index.html.erb
+++ b/app/views/areas/index.html.erb
@@ -1,12 +1,13 @@
-<% provide(:title, 'Focus Areas') %>
-<h1>All Focus Areas </br><small><%= current_org.area_description %></small></h1>
+<% provide(:title, 'Challenges') %>
+<h1>Challenges</br><small><%= current_org.area_description %></small></h1>
 <hr>
 <div class="row">
   <% @areas.each_with_index do |area, index| %>
   	<% if index == 3 %>
   		</div><div class="row">
   		<% index==0 end %>
-
-     <%= render partial: area %>
+      <div class="col-md-4">
+        <%= render partial: area %>
+      </div>
   <% end %>
 </div>
