--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,15 +1,16 @@
-<li id="<%= comment.id %>">
-  <div class="panel panel-default">
-    <div class="panel-body">
-			<div class="media-object pull-left"><%= link_to gravatar_for(comment.user), comment.user %></div>
-			<div class="media-body">
+<div class="panel panel-default">
+  <div class="panel-body">
+    <li id="<%= comment.id %>" class="media">
+  		<div class="media-object pull-left"><%= link_to gravatar_for(comment.user), comment.user %></div>
+  		<div class="media-body">
       	<h4 class="media-heading"><%= comment.title %></h4>
       	<span class="comment_content"><%= comment.body %></span>
       	<span class="timestamp">
       	  Posted <%= time_ago_in_words(comment.created_at) %> ago by <%= link_to comment.user.name, comment.user %>.
       	</span>
       </div>
-    </div>
+    </li>
   </div>
-</li>
+</div>
+
 
