--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,7 +15,7 @@
 
           <li><%= link_to "Home", root_path %></li>
           <li><%= link_to "Ideas", ideas_path %></li>
-          <li><%= link_to "Areas", areas_path %></li>
+          <li><%= link_to "Challenges", areas_path %></li>
           <li><%= link_to "Help", help_path %></li>
           <% if signed_in? %>
             <li><%= link_to "Users", users_path %></li>
