--- a/app/views/shared/_area_menu.html.erb
+++ b/app/views/shared/_area_menu.html.erb
@@ -1,6 +1,3 @@
-<ul class="nav nav-sidebar">
-	<% @areas = Area.all %>
-	<% @areas.each do |area|%>
-  <li><%= link_to area.title, area_path(area) %></li>
-  <% end %>
-</ul>
+<% current_areas.each do |area|%>
+  <%= render partial: area %>
+<% end %>
