--- a/app/views/shared/_post.html.erb
+++ b/app/views/shared/_post.html.erb
@@ -1,11 +1,13 @@
-<div class="panel panel-default">
-  <div class="panel-body">
-		<li id="<%= post.id %>" class="media">
+<li id="<%= post.id %>" class="media">
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <span class="pull-right label label-info">New</span>
+      <h4><%= link_to highlight(wrap(post.title), @search), idea_path(post.id) %></h4>
+    </div>
+    <div class="panel-body">
   		<div class="media-object pull-left"><%= link_to gravatar_for(post.user), post.user %>
   		</div>
   		<div class="media-body">
-
-        <h4 class="media-heading"><%= link_to highlight(wrap(post.title), @search), idea_path(post.id) %></h4>
         <span class="content">  
             <%= highlight(strip_tags(post.content.truncate(200)), @search) %>
             <%= link_to 'Show more', idea_path(:id => post.id), :class => 'load_full_content', :remote => true %>
@@ -13,8 +15,9 @@
         <span class="timestamp">
           Posted <%= time_ago_in_words(post.created_at) %> ago by <%= link_to post.user.name, post.user %> in <%= link_to Area.find(post.area_id).title, Area.find(post.area_id) %>.
         </span>
-        <span class="idea-stats">
-          <span><%= pluralize(post.comment_count, "Comment") %></span> | <span class="idea-votes"><%= pluralize(post.vote_count, "Upvote") %></span> <span class="vote-link"><%= link_to "", @vote_link[post.id], :class => 'glyphicon glyphicon-thumbs-up ' + @vote_class[post.id] , :remote => true %></span>
+      </br>
+        <span>
+          <span><%= link_to pluralize(post.comment_count, "Comment"), idea_comments_path(post), :class => 'comment_link', :remote => true %></span> | <span class="idea-votes"><%= pluralize(post.vote_count, "Upvote") %></span> <span class="vote-link"><%= link_to "", @vote_link[post.id], :class => 'glyphicon glyphicon-thumbs-up ' + @vote_class[post.id] , :remote => true %></span>
         </span>
         <span class="pull-right post-actions">
         <% if current_user?(post.user) %>
@@ -26,7 +29,8 @@
         </span>
         <div class="comments" style="display: none"><h2>Comments</h2><ol class="comment-list"></ol></div>
       </div>
-		</li>
-	</div>
-</div>
+    </div>
+  </div>
+</li>
+
 
