--- a/app/views/ideas/_idea.html.erb
+++ b/app/views/ideas/_idea.html.erb
@@ -1,4 +1,4 @@
 <li>
-	<%= render partial: 'shared/post', locals: { post: idea } %>
+	<%= render partial: 'shared/idea', locals: { idea: idea } %>
 </li>
 
