--- a/app/views/shared/_ideas.html.erb
+++ b/app/views/shared/_ideas.html.erb
@@ -1,5 +1,5 @@
 <% if @ideas.any? %>
   <ol class="media-list ideas">
-    <%= render partial: 'shared/post', collection: @ideas %>
+    <%= render partial: 'shared/idea', collection: @ideas %>
   </ol>
 <% end %>
