--- a/app/views/users/vote.js.erb
+++ b/app/views/users/vote.js.erb
@@ -1,5 +1,8 @@
-var $idea = $("li#<%= @idea.id %>"); 
-$idea.find('.idea-votes').replaceWith('<span class="idea-votes"><%= pluralize(@idea.vote_count, "Upvote") %>');
+var $idea = $("li#<%= @idea.id %>");
+if (!$idea.length){
+  $idea = $(document);
+}
+$idea.find('.idea-votes').text('<%= pluralize(@idea.vote_count, "Upvote") %>');
 $idea.find('.vote-link a').attr('href', '<%= user_unvote_path(:id => current_user.id, :idea_id => @idea.id) %>');
 $idea.find('.vote-link a').removeClass("unvoted");
 $idea.find('.vote-link a').addClass("voted");
