--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -17,6 +17,7 @@ html {
 
 body {
   //padding-top: 60px;
+  line-height: 1.5em;
 }
 
 section {
@@ -38,6 +39,7 @@ textarea {
 /* typography */
 
 h1, h2, h3, h4, h5, h6 {
+  font-family: inherit;
   line-height: 1;
 }
 
@@ -58,8 +60,7 @@ h2 {
 }
 
 p {
-  font-size: 1.1em;
-  line-height: 1.7em;
+  line-height: 1.5em;
 }
 
 hr {
@@ -69,24 +70,11 @@ hr {
 
 /* header */
 
-#logo {
-  float: left;
-  margin-right: 10px;
-  font-size: 1.7em;
-  color: white;
-  text-transform: uppercase;
-  letter-spacing: -1px;
-  // padding-top: 9px;
-  font-weight: bold;
-  line-height: 1;
-  &:hover {
-    color: #fff;
-    text-decoration: none;
-  }
-}
-
 .navbar-brand{
   padding: 0;
+  img{
+    margin-right:10px;
+  }
 }
 
 /* miscellaneous */
@@ -173,7 +161,7 @@ input {
 /* activity feed */
 
 p.activity {
-  margin-bottom: 0;
+  margin-bottom: 5px;
 }
 
 
@@ -356,3 +344,16 @@ div.pagination{
 #dropzone .title {
   font-size: 1.4em;
 }
+
+/* Additions to theme */
+
+.panel .panel-heading {
+  border-bottom: none;
+  padding-bottom: 0px;
+}
+
+.panel .panel-body {
+  padding-top: 5px;
+}
+
+
