--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,42 +1,74 @@
 <header>
-  <div class="navbar navbar-fixed-top navbar-inverse" role="navigation" id="slide-nav">
-    <div class="container">
+  <div class="navbar navbar-fixed-top header" role="navigation" id="slide-nav">
+    <div class="col-md-12">
       <div class="navbar-header">
-      <a class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> 
-      <span class="sr-only">Toggle navigation</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-     </a>
-      <%= link_to image_tag("logo.png", height: '50', width: '195') + "Idea app", root_path, id: "logo", :class => "navbar-brand" %>
-    </div>
-      <div id="slidemenu">
-        <ul class="nav navbar-nav navbar-right collapse navbar-collapse">
-
-          <li><%= link_to "Home", root_path %></li>
-          <li><%= link_to "Ideas", ideas_path %></li>
-          <li><%= link_to "Challenges", areas_path %></li>
-          <li><%= link_to "Help", help_path %></li>
+        <%= link_to image_tag("logo.png", height: '50', width: '195') + "IdeaCloud", root_path,  :class => "navbar-brand" %>
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse1"><i class="glyphicon glyphicon-search"></i></button> 
+      </div>
+      <div class="collapse navbar-collapse" id="navbar-collapse1">
+        <form class="navbar-form pull-left">
+          <div class="input-group" style="max-width:470px;">
+            <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
+            <div class="input-group-btn">
+              <button class="btn btn-default btn-primary" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+            </div>
+          </div>
+        </form>
+        <ul class="nav navbar-nav navbar-right">
+          <li><%= link_to current_user.name, current_user %></a></li>
+          <li>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-bell"></i></a>
+            <ul class="dropdown-menu">
+              <li><a href="#"><span class="badge pull-right">40</span>Link</a></li>
+              <li><a href="#"><span class="badge pull-right">2</span>Link</a></li>
+              <li><a href="#"><span class="badge pull-right">0</span>Link</a></li>
+              <li><a href="#"><span class="label label-info pull-right">1</span>Link</a></li>
+              <li><a href="#"><span class="badge pull-right">13</span>Link</a></li>
+            </ul>
+          </li>
           <% if signed_in? %>
-            <li><%= link_to "Users", users_path %></li>
-            <li id="fat-menu" class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                Account <b class="caret"></b>
-              </a>
-              <ul class="dropdown-menu">
-                <li><%= link_to "Profile", current_user %></li>
-                <li><%= link_to "Settings", edit_user_path(current_user) %></li>
-                <li class="divider"></li>
-                <li>
-                  <%= link_to "Sign out", signout_path, method: "delete" %>
-                </li>
-              </ul>
-            </li>
+          <li>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-user"></i></a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "Profile", current_user %></li>
+              <li><%= link_to "Settings", edit_user_path(current_user) %></li>
+              <li class="divider"></li>
+              <li><%= link_to "Sign out", signout_path, method: "delete" %></li>
+            </ul>
+          </li>
           <% else %>
             <li><%= link_to "Sign in", signin_path %></li>
           <% end %>
         </ul>
       </div>
     </div>
+  </div>
+
+  <div class="navbar navbar-default" id="subnav">
+    <div class="col-md-12">
+      <div class="navbar-header">    
+      
+        
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse2">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        
+      </div>
+      <div class="collapse navbar-collapse" id="navbar-collapse2">
+        <ul class="nav navbar-nav navbar-left">
+          <%= active_link_to "Home", root_path, "data-role" => "button", :wrap_tag => :li %>
+          <% if signed_in? %>
+          <%= active_link_to "Ideas", ideas_path, "data-role" => "button", :wrap_tag => :li %>
+          <%= active_link_to "Challenges", areas_path, "data-role" => "button", :wrap_tag => :li %>
+          <%= active_link_to "Submit Idea", submit_path, "data-role" => "button", :data => {:toggle=>"modal"}, :wrap_tag => :li %>
+          <%= active_link_to "Help", help_path, "data-role" => "button", :wrap_tag => :li %>
+          <%= active_link_to "Users", users_path, "data-role" => "button", :wrap_tag => :li %>
+          <% end %>
+        </ul>
+      </div> 
+    </div> 
   </div>
 </header>
