--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,7 @@
   </head>
   <body>
     <%= render 'layouts/header' %>
-    <div id="page-content">
-    <div class="container">
+    <div class="container" id="main">
       <% flash.each do |key, value| %>
         <%= content_tag(:div, value, class: "alert alert-#{key}") %>
       <% end %>
@@ -20,6 +19,5 @@
       <%= render 'layouts/footer' %>
       <%= debug(params) if Rails.env.development? %>
     </div>
-  </div>
   </body>
 </html>
