--- a/app/views/shared/_idea.html.erb
+++ b/app/views/shared/_idea.html.erb
@@ -8,14 +8,15 @@
     </div>
     <div class="panel-body">
       <% if @images && @images[idea.id] %>
-    		<div class="media-object pull-left thumb-list"><%= image_tag(@images[idea.id]) %></div>
+    		<div class="media-object pull-left thumb-list"><%= image_tag(@images[idea.id], :class => "img-circle") %></div>
       <% end %>
   		<div class="idea-body">
-        <span class="content">  
+        <p class="content">  
             <%= highlight(strip_tags(idea.content.truncate(400)), @search) %>
             <%= link_to 'Show more', idea_path(:id => idea.id), :class => 'load_full_content', :remote => true %>
-        </span>
+        </p>
         </div>
+        <hr>
         <div class="idea-info">
         <span class="timestamp">
           Posted <%= time_ago_in_words(idea.created_at) %> ago by <%= link_to idea.user.name, idea.user %> in <%= link_to Area.find(idea.area_id).title, Area.find(idea.area_id) %>.
